1. Fixed layout issues 2. Pushed media stream to footer 3. Style updates

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,1 +1,16 @@
 // Settings go here
+
+.siteWrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.flexStretch {
+  flex: 1;
+}
+
+.flexCol {
+  display: flex;
+  flex-direction: column;
+}
